[package]
name = "jayce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93" }
aptos = { git = "https://github.com/sota-zk-labs/aptos-core", branch = "jayce-aptos-node-v1.23.5" }
aptos-sdk = { git = "https://github.com/sota-zk-labs/aptos-core", branch = "jayce-aptos-node-v1.23.5" }
clap = { version = "4.5.21", features = ["derive"] }
config = { version = "0.14.1" }
dialoguer = "0.11.0"
rand = "0.7.3"
serde = { version = "1.0.215" }
serde_json = "1.0.133"
serde_yaml = "0.9.33"
strum_macros = "0.26.4"
tokio = { version = "1.41.1" }
url = "2.5.4"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/Tranduy1dol/x25519-dalek", branch = "zeroize_v1.7" }
